[metadata]
# replace with your username:
name = PiView-AG
version = 0.0.1
url = https://github.com/AdyGCode/PiView-AG
author = Example Author
author_email = author@example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6